[gd_scene load_steps=2 format=3 uid="uid://f0qe82uwfl57"]

[ext_resource type="Script" path="res://combat_ui.gd" id="1_p1lmv"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p1lmv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AttackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Attack"

[node name="AbilityButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Ability"

[node name="PassButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Pass"
